# rs-bindgen-cpp-example

./: .gitignore  Cargo.toml  README.md  build.rs
add-cpp/: CMakeLists.txt  main.cpp
add-cpp/src/: add.cpp  add.h
src/: main.rs
